<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tier_cl_restaurant"
    android:layout_width="match_parent"
    android:layout_height="59dp"
    android:layout_marginTop="7dp">

    <ImageView
        android:id="@+id/search_iv_restaurant_img"
        android:layout_width="73dp"
        android:layout_height="55dp"
        android:layout_marginBottom="4dp"
        android:clipToOutline="true"
        android:contentDescription="@string/restaurant_img_info"
        android:paddingEnd="18dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_default_restaurant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/search_iv_restaurant_tier_img"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/restaurant_tier_info"
        android:src="@drawable/ic_rank_1"
        app:layout_constraintStart_toStartOf="@id/search_iv_restaurant_img"
        app:layout_constraintTop_toTopOf="@id/search_iv_restaurant_img" />

    <ImageView
        android:id="@+id/search_iv_restaurant_evaluation_img"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/square_round_background"
        android:backgroundTint="#01BAA6"
        android:contentDescription="@string/restaurant_evaluation_info"
        android:padding="1dp"
        android:src="@drawable/ic_check"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/search_tv_restaurant_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginEnd="22dp"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/search_iv_restaurant_favorite_img"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/square_round_background"
        android:backgroundTint="#FEAF1C"
        android:contentDescription="@string/restaurant_favorite_info"
        android:padding="1dp"
        android:src="@drawable/ic_favorite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/search_tv_restaurant_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/search_tv_restaurant_Name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_medium"
        android:singleLine="true"
        android:text="@{restaurant.restaurantName}"
        android:textColor="#323232"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/search_iv_restaurant_img"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="식당 이름 입니다." />

    <TextView
        android:id="@+id/search_tv_restaurant_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/pretendard_regular"
        android:text="@{restaurant.restaurantDetails}"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_iv_restaurant_img"
        app:layout_constraintTop_toBottomOf="@id/search_tv_restaurant_Name"
        tools:text="일식 | 건입~중문" />

    <!-- Divider Line -->
    <View
        android:id="@+id/search_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:background="@color/cement_3"
        app:layout_constraintBottom_toBottomOf="@id/search_iv_restaurant_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/search_tv_restaurant_Name" />

</androidx.constraintlayout.widget.ConstraintLayout>