<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="restaurant"
            type="com.kust.kustaurant.domain.model.TierRestaurant" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tier_cl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@drawable/bottom_sheet_design"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/tier_iv_restaurant_img"
            android:layout_width="98dp"
            android:layout_height="74dp"
            android:contentDescription="@string/restaurant_img_info"
            android:paddingEnd="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_default_restaurant"
            app:layout_constraintBottom_toTopOf="@+id/tier_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            app:strokeColor="@null"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/tier_iv_restaurant_tier_img"
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:contentDescription="@string/restaurant_tier_info"
            android:src="@drawable/ic_rank_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tier_tv_restaurant_details"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/tier_iv_restaurant_favorite_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/restaurant_favorite_info"
            android:src="@drawable/ic_favorite"
            android:visibility="@{restaurant.isFavorite ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/tier_iv_restaurant_img"
            app:layout_constraintStart_toStartOf="@id/tier_iv_restaurant_img" />

        <ImageView
            android:id="@+id/tier_iv_restaurant_evaluation_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/restaurant_evaluation_info"
            android:src="@drawable/ic_check"
            android:visibility="@{restaurant.isEvaluated ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/tier_iv_restaurant_img"
            app:layout_constraintStart_toEndOf="@id/tier_iv_restaurant_favorite_img"
            app:layout_goneMarginStart="18dp" />

        <TextView
            android:id="@+id/tier_tv_restaurant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/pretendard_medium"
            android:singleLine="true"
            android:text="@{restaurant.restaurantName}"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tier_iv_restaurant_tier_img"
            app:layout_constraintStart_toEndOf="@id/tier_iv_restaurant_img"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="식당 이름 입니다." />

        <TextView
            android:id="@+id/tier_tv_restaurant_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_regular"
            android:text="@{restaurant.restaurantCuisine + ` | ` + restaurant.restaurantPosition}"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/tier_tv_restaurant_name"
            app:layout_constraintStart_toEndOf="@id/tier_iv_restaurant_img"
            app:layout_constraintTop_toBottomOf="@id/tier_tv_restaurant_name"
            tools:text="일식 | 건입~중문" />

        <TextView
            android:id="@+id/tier_tv_restaurant_partnership_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_regular"
            android:text="@{restaurant.partnershipInfo.isEmpty() ? @string/restaurant_no_partnership_info : restaurant.partnershipInfo}"
            android:textSize="12sp"
            android:maxLines="3"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="@id/tier_tv_restaurant_name"
            app:layout_constraintStart_toEndOf="@id/tier_iv_restaurant_img"
            app:layout_constraintTop_toBottomOf="@id/tier_tv_restaurant_details"
            tools:text="제휴 해당 사항 없음" />

        <!-- Divider Line -->
        <View
            android:id="@+id/tier_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@color/cement_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tier_iv_restaurant_img" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>