<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.kust.kustaurant.presentation.ui.community.CommunityPostWriteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Start Guideline -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <!-- End Guideline -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <!-- Top Bar -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/community_cl_top_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="360:65"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/community_tv_activity_post_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semibold"
                android:gravity="center"
                android:text="게시글 작성"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Back Button -->
            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/back_btn_info"
                android:padding="10dp"
                android:src="@drawable/btn_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/all_radius_100_none"
                android:backgroundTint="@color/cement_4"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="완료"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:nestedScrollingEnabled="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ll_bottom_group"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/community_cl_top_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_select_post_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:background="@drawable/all_radius_100_signature_1"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_select_post_sort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pretendard_regular"
                        android:text="게시판 선택"
                        android:textColor="@color/signature_1" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/item_community_spinner_background" />
                </LinearLayout>

                <EditText
                    android:id="@+id/et_post_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/pretendard_semibold"
                    android:gravity="top|start"
                    android:hint="제목을 입력해주세요"
                    android:inputType="text"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_select_post_sort" />

                <View
                    android:id="@+id/title_divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/cement_3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_post_title" />

                <WebView
                    android:id="@+id/et_post_content"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="25dp"
                    android:background="@android:color/transparent"
                    android:gravity="top|start"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_divider"
                    app:layout_constraintBottom_toBottomOf="parent"/>

<!--
                <EditText
                    android:id="@+id/et_post_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@android:color/transparent"
                    android:gravity="top|start"
                    android:hint="@string/community_post_write_info"
                    android:inputType="textMultiLine"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_divider" />
-->
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


        <LinearLayout
            android:id="@+id/ll_bottom_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start">

            <ImageView
                android:id="@+id/iv_select_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/community_post_select_img_description"
                android:padding="5dp"
                android:src="@drawable/ic_select_img" />

            <ImageView
                android:id="@+id/iv_go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/community_post_go_back_description"
                android:padding="5dp"
                android:src="@drawable/ic_go_back" />

            <ImageView
                android:id="@+id/iv_go_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/community_post_go_forward_description"
                android:padding="5dp"
                android:src="@drawable/ic_go_forward" />

            <ImageView
                android:id="@+id/iv_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/community_post_bold_description"
                android:padding="5dp"
                android:src="@drawable/ic_word_bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

